fixed scrollbar look (firefox 61.0 for Ubuntu), fixed leaf identification problem

--- a/src/app/tool/side-panel/accordeons/accordeons.component.scss
+++ b/src/app/tool/side-panel/accordeons/accordeons.component.scss
@@ -2,13 +2,14 @@
 .accordeons {
     position: relative;
     background-color: $color-gray-bg-light;
-    width: 100%;
+    width: 360px;
     height: 100%;
     max-height: 100%;
     overflow-y: scroll;
     .accordeon{
         .label {
             height: 48px;
+            width: 100%;
             z-index: 3;
             padding-left: 20px;
             padding-right: 20px;
